getPreferencesList
