# app/Virtual/Resources/PreferenceResource.php
@@ -1,0 +1,24 @@
+<?php
+namespace App\Virtual\Resources;
+
+/**
+ * @OA\Schema(
+ *     title="PreferenceResource",
+ *     description="Preference resource",
+ *     @OA\Xml(
+ *         name="PreferenceResource"
+ *     )
+ * )
+ */
+class PreferenceResource
+{
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Virtual\Models\Preference[]
+     */
+    private $data;
+}
